--- a/src/App.scss
+++ b/src/App.scss
@@ -20,17 +20,19 @@ a:hover {
 .app {
   display: flex;
   overflow: hidden;
+  min-height: 100vh;
 }
 
 .navbar {
-  flex: 0.2;
+  flex: 0.1533;
   background-color: rgb(0, 21, 41);
 }
 
 .main {
-  flex: 0.8;
+  flex: 0.8467;
   width: 100%;
-
+  display: flex;
+  flex-direction: column;
 }
 
 .routes {
@@ -40,9 +42,8 @@ a:hover {
 .nav-container {
   position: fixed;
   left: 0;
-  margin: 10px;
   height: 100vh;
-  margin: 0px;
+  margin: 0;
   background-color: rgb(0, 21, 41);
 }
 
