--- a/src/App.scss
+++ b/src/App.scss
@@ -111,7 +111,7 @@ a:hover {
   .main {
     flex: 1;
     margin-top: 90px;
-    margin-left: 0px;
+    margin-left: 0;
     margin-right: 10px;
   }
 
@@ -129,7 +129,7 @@ a:hover {
 
   .ant-menu {
     position: absolute;
-    right: 0px;
+    right: 0;
   }
   .home-title {
     font-size: 1.4rem !important;
@@ -240,7 +240,7 @@ a:hover {
 }
 
 .coin-links {
-  padding: 0px 20px;
+  padding: 0 20px;
   flex: 0.5;
 }
 
@@ -275,13 +275,13 @@ a:hover {
     flex-direction: column;
   }
   .stats-container h2 {
-    margin-top: 0px;
+    margin-top: 0;
   }
 }
 
 @media screen and (max-width: 500px) {
   .coin-links {
-    padding: 0px;
+    padding: 0;
   }
   .coin-detail-container {
     margin: 0;
@@ -318,7 +318,7 @@ a:hover {
 
 .news-card p {
   color: black;
-  margin: 10px 0px !important;
+  margin: 10px 0 !important;
 }
 
 .provider-container {
@@ -353,7 +353,7 @@ a:hover {
 }
 
 .current-price {
-  margin-top: 0px !important;
+  margin-top: 0 !important;
   font-weight: 900 !important;
 }
 
@@ -365,16 +365,16 @@ a:hover {
 }
 
 .show-more {
-  margin-top: 0px !important;
+  margin-top: 0 !important;
 }
 
 .exchange-image {
-  margin: 0px 10px !important;
+  margin: 0 10px !important;
 }
 
 .search-crypto {
   margin: 20px auto 30px auto;
-  width: 250px;
+  width: 350px;
 }
 
 .crypto-card-container {
