--- a/src/App.scss
+++ b/src/App.scss
@@ -404,7 +404,7 @@ a:hover {
 
 .select-timeperiod {
   width: 200px !important;
-  margin-top: 20px !important;
+  margin: 20px 0 !important;
 }
 
 .footer {
