added mock data for exchanges

--- a/src/App.scss
+++ b/src/App.scss
@@ -389,6 +389,10 @@ a:hover {
   margin: 0 10px !important;
 }
 
+.exchanges-row {
+  width: 100%;
+}
+
 .search-crypto {
   margin: 20px auto 30px auto;
   width: 350px;
